--- a/app/src/main/res/layout/item_empty_list_message.xml
+++ b/app/src/main/res/layout/item_empty_list_message.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -9,13 +10,14 @@
         android:layout_height="70dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_sad_face"
-        android:contentDescription="Sad Face Icon" />
+        android:contentDescription="Sad Face Icon"
+        app:tint="?colorTextPrimary" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Coudn't find any Tv SHow"
+        android:text="Coudn't find any Tv Show"
         android:textAppearance="@style/TextH3"
         android:textColor="?colorTextPrimary" />
 
