--- a/app/src/main/res/layout/item_tv_show_poster.xml
+++ b/app/src/main/res/layout/item_tv_show_poster.xml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.imageview.ShapeableImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:id="@+id/imageViewTvShowPoster"
+    android:layout_width="115dp"
+    android:layout_height="115dp"
+    android:scaleType="centerCrop"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:shapeAppearanceOverlay="@style/roundedCornerShapeSmall"
+    tools:src="@tools:sample/avatars">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/imageViewTvShowPoster"
-        android:layout_width="115dp"
-        android:layout_height="115dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/roundedCornerShapeSmall"
-        tools:src="@tools:sample/avatars" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.imageview.ShapeableImageView>
